2001-05-02  Larry Jones  <larry.jones@sdrc.com>

	* rcs.c (RCS_getdate): Handle the (unusual!) case where we
	can't find any revisions at all.
	(Reported by Ryan Grow <rgrow@Dbdoctor.net>.)

2001-04-30  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (multiroot2-9a): Rename (from multiroot2-9) to avoid
	duplicate names; fix to work without SERVER_SUPPORT defined.
	(Reported by Pavel Roskin <proski@gnu.org>.)

2001-04-29  Derek Price  <dprice@collab.net>

	* Makefile.am (check-local): Make dependent on localcheck and
	remotecheck and move old check target...
	(localcheck): here.

	* Makefile.in: Regenerated.

2001-04-27  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (pserver): Add tests for readers and writers.

2001-04-27  Derek Price  <dprice@collab.net>

	* sanity.sh (version-2r): Update to handle patch releases in version
	numbers.

2001-04-27  Derek Price  <dprice@collab.net>

	* version.c: Regenerated.

2001-04-27  Derek Price  <dprice@collab.net>

	* version.c: Regenerated.

2001-04-27  Larry Jones  <larry.jones@sdrc.com>

	* main.c (lookup_command_attribute): Lookup specified command, not
	whatever's in the global command_name.

2001-04-25  Derek Price  <dprice@collab.net>

	* Makefile.in: Regenerated using AM 1.4e as of today at 18:10 -0400.
	* version.c: Regenerated.

2001-04-22  Larry Jones  <larry.jones@sdrc.com>

	* tag.c (tag_check_valid): Make an unwritable val-tags file a
	warning instead of a fatal error.

2001-04-20  Larry Jones  <larry.jones@sdrc.com>

	* annotate.c (annotate_usage): -r and -D are not mutually exclusive.
	* main.c (cmd_usage): Add missing version subcommand.
	* update.c (update_usage): Add missing -C option.

	* sanity.sh (death2): New tests for previous change.

	* classify.c (Classify_File): Treat a dead revision like the RCS
	file doesn't exist.
	* sanity.sh: Update to match.

2001-04-16  Larry Jones  <larry.jones@sdrc.com>

	* checkout.c, update.c: Fix usage messages: -r and -D are not
	mutually exclusive.