@@ -123,7 +123,7 @@ expand_string (strptr, n, newsize)
 /* *STR is a pointer to a malloc'd string.  *LENP is its allocated
    length.  Add SRC to the end of it, reallocating if necessary.  */
 void
-allocate_and_strcat (str, lenp, src)
+xrealloc_and_strcat (str, lenp, src)
     char **str;
     size_t *lenp;
     const char *src;
